# persona

./: README.md  main.py  pyproject.toml  test.py
persona/: biometrics.py  database.py  sever.py  types.py
persona-frontend/: README.md  hello.json  package.json
persona-frontend/src/lib/: index.ts
persona-frontend/src/routes/api/createUser/: +server.ts
persona-frontend/src/routes/api/track/: +server.ts
persona-frontend/src/routes/securedPage/: +page.svelte
persona-frontend/src/routes/signup/: +page.svelte
