[project]
name = "persona"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "motor>=3.7.1",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "requests>=2.33.1",
    "ruff>=0.15.11",
]
